# SimpleRayTracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  GameWindow.cpp  GameWindow.hpp  Image24.cpp  Image24.hpp  Light.cpp  Light.hpp  Matrix.cpp  Matrix.hpp  Matrix2.cpp  Matrix2.hpp  ParallelLight.cpp  ParallelLight.hpp  Polygon.cpp  Polygon.hpp  README.md  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  SpotLight.cpp  SpotLight.hpp  Triangle.cpp  Triangle.hpp  Vector.cpp  Vector.hpp  Vector2.cpp  Vector2.hpp  Visible.cpp  Visible.hpp  Window.cpp  Window.hpp  main.cpp  matrix2.hpp
tests/: CMakeLists.txt  Matrix.cpp  Matrix2.cpp  Vector.cpp  matrix.cpp  matrix2.cpp  vector.cpp
